--- a/admin/pages/tables/simple.html
+++ b/admin/pages/tables/simple.html
@@ -503,7 +503,7 @@
                       </td>
                       <td><span class="badge bg-green">90%</span></td>
                     </tr>
-                  </table>
+                  </table>test
                 </div><!-- /.box-body -->
                 <div class="box-footer clearfix">
                   <ul class="pagination pagination-sm no-margin pull-right">
